# tfm-pytorch-book

./: .gitignore  CONTRIBUTING.md  README.md  STYLE_GUIDE.md  _quarto.yml  index.qmd  pyproject.toml
.github/workflows/: check.yml
book/: preface.qmd
book/appendices/: full-book-roadmap.qmd
book/part-1/: semantic-axes.qmd
book/part-2/: attention-information-flow.qmd
book/part-3/: build-minimal-tfm.qmd  why-tabular-foundation-models.qmd
proposal/: book-proposal.md  editorial-plan.md  source-inventory.md
src/tfm_pytorch_book/: __init__.py  contracts.py  mini_tfm.py
tests/: test_contracts.py  test_mini_tfm.py
