[project]
name = "tfm-pytorch-book"
version = "0.1.0"
description = "Executable companion code for Engineering Tabular Foundation Models with PyTorch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

